--- a/style.css
+++ b/style.css
@@ -30,3 +30,11 @@ body {
 .purple {
   background-color: #819ffa;
 }
+
+.flash {
+  background-color: white;
+}
+
+.userflash {
+  background-color: green;
+}
